--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,8 +1,8 @@
 .row {
-  position: fixed;
-  left: 0;
   bottom: 0;
+  right: 0;
   width: 100%;
-  text-align: center; }
+  text-align: center;
+  margin-top: 20px; }
   .row h1 {
     font-size: 25px; }
