--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -1,9 +1,9 @@
 .row {
-    position: fixed;
-    left: 0;
     bottom: 0;
+    right: 0;
     width: 100%;
     text-align: center;
+    margin-top: 20px;
     h1 {
     	font-size: 25px;
     }
