--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,27 @@
-.navbar-default {
-    background-color: #fff;
-    border-color: #fff;
+.navbar-brand {
+	padding: 5px;
+	img {
+		max-width: 120px;
+	}
 }
-
-.container {
-    width: 1284px;
+#footer {
+	text-align: center;
+	background: #000;
+	color: #fff;
+	padding: 20px;
+	margin-top: 50px;
+}
+main {
+	min-height: calc(100vh - 200px);
+}
+#sign-in,
+#sign-up {
+	h1 {
+		margin-bottom: 40px;
+	}
+	text-align: center;
+	max-width: 620px;
+	.form-actions {
+		margin-top: 30px;
+	}
 }
