--- a/src/home/home.css
+++ b/src/home/home.css
@@ -1,78 +1,4 @@
-.home {
-  padding-top: 125px; }
-
-.home_h1 {
-  max-width: 650px;
-  margin: auto;
-  height: 300px; }
-  .home_h1 h1 {
-    font-size: 2.777em;
-    line-height: 1.2em;
-    margin-top: 1.6em;
-    font-weight: 600;
-    margin: 1.3rem 0;
-    color: #fff; }
-  .home_h1 p {
-    display: block;
-    -webkit-margin-before: 1em;
-    -webkit-margin-after: 1em;
-    -webkit-margin-start: 0px;
-    -webkit-margin-end: 0px;
-    font-size: 21px;
-    color: #fff; }
-  .home_h1 h2 {
-    font-size: 20px;
-    margin-left: 192px; }
-    .home_h1 h2 a {
-      color: #fff; }
-
-.btn1 {
-  width: 101px;
-  height: 40px;
-  color: #fff;
-  background-color: #449d44;
-  margin: 0px 50px 0px 176px;
-  padding: 11px 124px 11px 100px;
-  font-size: 20px; }
-
-#compo1 {
-  padding-top: 120px;
-  background-color: #026AA7;
-  width: 1254px; }
-
-.container1 {
-  background-color: #0079bf;
+.home img {
+  margin: 20px 0;
   width: 100%;
-  height: 100%;
-  max-width: 1284px; }
-
-#compo2 {
-  padding-top: 46px;
-  background-color: #315989;
-  width: 1254px;
-  height: 753px; }
-  #compo2 p {
-    color: #fff;
-    margin-left: 193px;
-    font-size: 21px; }
-  #compo2 img {
-    height: 598px;
-    margin-left: 222px;
-    margin-top: 16px; }
-
-#compo3 {
-  padding-top: 46px;
-  background: #eb5a46;
-  width: 1254px;
-  height: 753px; }
-  #compo3 h1 {
-    color: #fff;
-    margin-left: 193px; }
-  #compo3 p {
-    color: #fff;
-    margin-left: 193px;
-    font-size: 21px; }
-  #compo3 img {
-    height: 465px;
-    margin-left: 217px;
-    margin-top: 16px; }
+}
