--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -1,94 +1,6 @@
 .home {
-	padding-top: 125px;
-}
-
-.home_h1 {
-	max-width: 650px;
-  margin: auto;
-  height: 300px;
-  h1{
-  	font-size: 2.777em;
-    line-height: 1.2em;
-    margin-top: 1.6em;
-    font-weight: 600;
-    margin: 1.3rem 0;
-    color:#fff;
-  }
-  p {
-  	display: block;
-    -webkit-margin-before: 1em;
-    -webkit-margin-after: 1em;
-    -webkit-margin-start: 0px;
-    -webkit-margin-end: 0px;
-    font-size: 21px;
-    color:#fff;
-  }
-  h2 {
-  	font-size: 20px;
-    margin-left: 192px;
-    a {
-    	color: #fff
-    }
-  }
-}
-
-.btn1 {
-	width: 101px;
-  height: 40px;
-  color: #fff;
-  background-color: #449d44;
-  margin: 0px 50px 0px 176px;
-  padding: 11px 124px 11px 100px;
-  font-size: 20px;
-}
-
-#compo1 {
-	padding-top: 120px;
-	background-color:#026AA7;
-	width: 1254px;
-}
-
-.container1 {
-	background-color: #0079bf;
-	width: 100%;
-  height: 100%;
-  max-width: 1284px;
-}
-
-#compo2 {
-	padding-top: 46px;
-	background-color:#315989;
-	width: 1254px;
-	height: 753px;
-	p {
-		color:#fff;
-		margin-left: 193px;
-    font-size: 21px;
-	}
 	img {
-		height: 598px;
-    margin-left: 222px;
-    margin-top: 16px;
-	}
-}
-
-#compo3 {
-	padding-top: 46px;
-	background: #eb5a46;
-	width: 1254px;
-	height: 753px;
-	h1 {
-		color:#fff;
-		margin-left: 193px;
-	}
-	p {
-		color:#fff;
-		margin-left: 193px;
-    font-size: 21px;
-	}
-	img {
-		height: 465px;
-    margin-left: 217px;
-    margin-top: 16px;
+		margin: 20px 0;
+		width: 100%;
 	}
 }
