--- a/src/App.scss
+++ b/src/App.scss
@@ -6,9 +6,8 @@
 }
 #footer {
 	text-align: center;
-	background: #000;
-	color: #fff;
 	padding: 20px;
+	border-top: 1px solid #ccc;
 	margin-top: 50px;
 }
 main {
